<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/bar_top"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/cl_bar_bg" >

        <LinearLayout
            android:id="@+id/action_back"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@drawable/bt_clickerstyle2_blue"
            android:clickable="true"
            android:descendantFocusability="blocksDescendants"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/bt_clickerstyle2_blue"
                android:contentDescription="@string/action_back"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_action_back" />
        </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="采集"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <LinearLayout
            android:id="@+id/action_save"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:clickable="true"
            android:background="@drawable/bt_clickerstyle2_blue"
            android:descendantFocusability="blocksDescendants"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/bt_clickerstyle2_blue"
                android:contentDescription="@string/action_save"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_action_save" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bar_bottom"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@color/cl_bar_bg" >

        <LinearLayout
            android:id="@+id/action_gps"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bt_clickerstyle2_blue"
            android:clickable="true"
            android:descendantFocusability="blocksDescendants" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:contentDescription="@string/action_gps"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_action_gps" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/action_undo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bt_clickerstyle2_blue"
            android:clickable="true"
            android:descendantFocusability="blocksDescendants" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/action_undo"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_action_undo" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/action_delpt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bt_clickerstyle2_blue"
            android:clickable="true"
            android:descendantFocusability="blocksDescendants" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/action_delpt"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_action_delpt" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/action_clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bt_clickerstyle2_blue"
            android:clickable="true"
            android:descendantFocusability="blocksDescendants"
            android:gravity="center" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:contentDescription="@string/action_clear"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_action_clear" />
        </LinearLayout>
    </LinearLayout>

    <com.surveyor.drawlib.mapview.MapView
        android:id="@+id/map_collect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bar_bottom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/bar_top" />
</RelativeLayout>